--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,5 @@
-config:
-  info:"Springcloud-config,version=1"
+data:
+  env: config-eureka-dev
+  user:
+    username: eureka-client-user
+    password: 1291029102
